--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jss": "^10.10.0",
     "react-scripts": "5.0.1",
+    "serverless-dotenv-plugin": "^6.0.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
