--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.10.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "serverless": "^3.33.0",
     "serverless-dotenv-plugin": "^6.0.0",
