--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "firebase": "^9.15.0",
+    "i": "^0.3.7",
+    "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-gallery": "^1.0.0",
     "react-jss": "^10.10.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
