--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-gallery": "^1.0.0",
+    "react-image-gallery": "^1.3.0",
     "react-jss": "^10.10.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-image-gallery": "^1.2.0",
     "@types/react-vertical-timeline-component": "^3.3.3"
   }
 }
